--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="bottom-container">
             <a class="footer-links" href="https://www.linkedin.com/in/vasudev-s-p-67652922a"><b>LinkedIn</b></a>
-            <a class="footer-linkss" href="https://twitter.com/">Twitter</a>
+             <a class="footer-linkss" href="https://twitter.com/VasudevSP07">Twitter</a>
             <a class="footer-linksss" href="https://github.com/VasudevSP">Github</a>
             <p class="a" >© VASUDEV.S.P</p>
         </div>
