--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </ul>
                 </p>
                 <h2 class="current">CURRENTLY DO,</h2>
-                <p class="full-stack">Full Stack Course and Improving Skills</p>
+                <p class="full-stack">Full Stack Course</p>
               </div>
               <hr class="breaker" >
               <div>
